--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "crypto-trading-app",
+  "name": "raze-solana-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "node scripts/generate-html.js && vite build",
+    "build": "npm run typecheck && node scripts/generate-html.js && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "typecheck": "tsc --noEmit",
     "preview": "vite preview",
     "analyze": "npx vite-bundle-analyzer",
     "generate-html": "node scripts/generate-html.js"
@@ -15,7 +16,7 @@
     "@jup-ag/api": "^6.0.30",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-switch": "^1.1.2",
-    "@solana/spl-token": "^0.4.13",
+    "@solana/spl-token": "^0.4.14",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.8",
     "@types/js-cookie": "^3.0.6",
@@ -28,6 +29,7 @@
     "framer-motion": "^11.11.17",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "leva": "^0.10.1",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,8 +44,8 @@
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
@@ -53,8 +55,16 @@
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.3.3",
     "terser": "^5.43.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.9.3",
     "vite": "^6.4.0",
-    "vite-bundle-analyzer": "^0.7.0"
+    "vite-bundle-analyzer": "^0.7.0",
+    "vite-plugin-checker": "^0.11.0"
+  },
+  "overrides": {
+    "bigint-buffer": "npm:@solana/bigint-buffer@^1.1.5",
+    "node-fetch": "^2.7.0",
+    "@solana/buffer-layout-utils": {
+      "bigint-buffer": "npm:@solana/bigint-buffer@^1.1.5"
+    }
   }
 }
