--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-html": "node scripts/generate-html.js"
   },
   "dependencies": {
+    "@google/model-viewer": "^4.1.0",
     "@jup-ag/api": "^6.0.30",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-switch": "^1.1.2",
